[gd_scene load_steps=8 format=3 uid="uid://fhu21gqyjaqs"]

[ext_resource type="Script" path="res://game_over_screen/game_over_screen.gd" id="1_huqc0"]
[ext_resource type="FontFile" uid="uid://dmplx3q6t1wca" path="res://fonts/quick_cat/Quick Cat.ttf" id="2_r7ute"]
[ext_resource type="LabelSettings" uid="uid://bniibq6yjo06v" path="res://fonts/pink_score_font.tres" id="2_w1jg3"]
[ext_resource type="Texture2D" uid="uid://bmigx6ewv0ewq" path="res://assets/sprites/REPLAYBUTTON.png" id="4_rwtvj"]
[ext_resource type="Texture2D" uid="uid://bqyg6tx8twnto" path="res://assets/sprites/MENUBUTTON.png" id="5_ja2rj"]

[sub_resource type="LabelSettings" id="LabelSettings_3dt3o"]
font = ExtResource("2_r7ute")
font_size = 50
font_color = Color(0.286275, 0.4, 1, 1)
outline_size = 22
outline_color = Color(0, 0.262745, 0.788235, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vwbhj"]
font = ExtResource("2_r7ute")
font_size = 40
font_color = Color(0.286275, 0.4, 1, 1)
outline_size = 18
outline_color = Color(0, 0.262745, 0.788235, 1)
shadow_size = 0

[node name="game_over_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_huqc0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.407843, 0.784314, 0.235294)

[node name="GameOverLbl" type="Label" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 130.0
offset_right = 450.0
offset_bottom = 197.0
text = "GAME OVER
"
label_settings = ExtResource("2_w1jg3")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "354 cm
"
label_settings = SubResource("LabelSettings_3dt3o")
horizontal_alignment = 1

[node name="HighscoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RECORD: 354 cm
"
label_settings = SubResource("LabelSettings_vwbhj")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="ReplayButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_rwtvj")

[node name="MenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_ja2rj")

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="GameOverFlash" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReplayButton" to="." method="_on_replay_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_btn_pressed"]
[connection signal="timeout" from="GameOverFlash" to="." method="_on_game_over_flash_timeout"]
